--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,11 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>5.5.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-core</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
