--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>7.11.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
