--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
 			<artifactId>flyway-core</artifactId>
 			<version>7.11.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.2-android</version>
+		</dependency>
 	</dependencies>
 
 	<build>
